--- a/assets/css/adventure.css
+++ b/assets/css/adventure.css
@@ -1,28 +1,34 @@
-#inventoryItem{
-    width: 100px;
-    height: auto;
+#game-container{
     position: absolute;
-    top: 90%;
+    width: 1000px;
+    left: 250px;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    border: 2px solid black;
+}
+
+#title{
+    text-align: center;
+}
+
+h1{
+    border-bottom: 2px solid black;
+    padding-bottom: 15px;
 }
 
 #description{
-    position: absolute;
-    left: 200px;
-    font-size: 50px;
+    padding-left: 15px;
+}
+
+#button1{
+    margin: 15px;
+}
+
+#button2{
+    margin: 15px;
 }
 
 #button3{
-    position: absolute;
-    top: 150px;
-    left: 200px;
-}
-#button2{
-    position: absolute;
-    top: 150px;
-    left: 400px;
-}
-#button1{
-    position: absolute;
-    top: 150px;
-    left: 600px;
+    margin: 15px;
 }
