--- a/assets/css/adventure.css
+++ b/assets/css/adventure.css
@@ -5,7 +5,8 @@
     right: 0;
     bottom: 0;
     top: 0;
-    border: 2px solid black;
+    border: 2px solid white;
+    background-color: black;
 }
 
 #title{
@@ -13,16 +14,19 @@
 }
 
 h1{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid white;
     padding-bottom: 15px;
 }
 
 #description{
     padding-left: 15px;
+    text-align: center;
+    font-size: 20px;
 }
 
 #button1{
     margin: 15px;
+    left: 100px;
 }
 
 #button2{
@@ -31,4 +35,18 @@ h1{
 
 #button3{
     margin: 15px;
+}
+
+img{
+    width: 800px;
+    float: left;
+    margin-right: 100px;
+    margin-left: 85px;
+    text-align: center;
+    margin-top: 25px;
+}
+
+body{
+    color: white;
+    background-color: black;
 }
