--- a/assets/css/adventure.css
+++ b/assets/css/adventure.css
@@ -23,19 +23,50 @@ h1{
     padding-left: 15px;
     text-align: center;
     font-size: 20px;
+    margin-top: 10px;
 }
 
 #button1{
     margin: 15px;
     left: 100px;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 7px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 #button2{
     margin: 15px;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 7px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 #button3{
     margin: 15px;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 7px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 img{
